# resonance-stream

./: .env.template  .gitignore  5003_missing_fields.txt  BUILD.md  BUILD_EN.md  Cargo.toml  LICENSE  README.md  README_EN.md  TROUBLE_SHOOTING.md  TROUBLE_SHOOTING_EN.md  Trunk.toml  build_python.bat  dataset.jsonl  missing_fields.txt  package-lock.json  package.bat  package.json  packet.txt  parsed-packet.txt  payload with parsed.txt  payload.txt  payload_party_register.txt  prev_payload_parsing.txt  setup_libs.bat  styles.css  tailwind.config.js  translator.spec
src/: app.rs  main.rs  store.rs  tauri_bridge.rs  types.rs  ui_types.rs  utils.rs
src-python/: main.py  requirements.txt  setup_env.ps1  setup_env.sh
src-tauri/: Cargo.toml  app.manifest  build.rs  packet_received.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: models.json
src-tauri/src/: config.rs  io.rs  lib.rs  main.rs  model_manager.rs  packet_buffer.rs  python_translator.rs  sniffer.rs  sniffer_logic_test.rs
src-tauri/src/config/: app_config.rs  metadata.rs  mod.rs
src-tauri/src/io/: data_factory.rs  fs.rs  mod.rs
src-tauri/src/protocol/: decoder.rs  mod.rs  packet_buffer.rs  parser.rs  types.rs
src-tauri/src/services/: downloader.rs  mod.rs  processor.rs  sniffer.rs  translator.rs
src-tauri/src/services/downloader/: app_updater.rs  dictionary.rs  gist.rs  mod.rs  model.rs  server.rs  updater.rs
src-tauri/src/services/sniffer/: message_processor.rs  mod.rs  network.rs  pipeline.rs  stream_traacker.rs
src-tauri/src/services/translator/: core.rs  mod.rs  processor.rs  server_manager.rs
src/components/: chat_container.rs  chat_row.css  chat_row.rs  dictionary_modal.rs  mod.rs  nav_bar.rs  network_troubleshooter.rs  settings.css  settings.rs  setup_wizard.rs  title_bar.css  title_bar.rs
src/hooks/: mod.rs  use_config.rs  use_events.rs
src/styles/: theme.css  utility.css
style/: input.css
