[package]
name = "bpsr-translator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bpsr_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windivert = { version = "0.6", features = ["vendored"] }
etherparse = "0.19.0" # To parse the raw bytes into human-readable data
tokio = { version = "1", features = ["fs", "io-util"] }
reqwest = { version = "0.11", features = ["stream", "blocking", "rustls-tls"] }
futures-util = "0.3"
tauri-plugin-fs = "2.4.5" # For handling the download stream
# Network & Parsing
pnet = "0.35"
byteorder = "1.5"  # For reading u16/u32 from packets

# Cryptography (Matches BPSR-ZDPS logic)
aes = "0.8"
ctr = "0.9"
hex = "0.4"

[dev-dependencies]
pnet = "0.35"
serde_json = "1.0"
